[project]
name = "digestif"
version = "0.1.0"
requires-python = "==3.14.5"
dependencies = [
    "aiohttp==3.13.5",
    "resend==2.30.1",
    "beautifulsoup4==4.14.3",
    "requests==2.34.2",
    "mistralai==2.4.5",
    "lxml-html-clean==0.4.5",
]

[dependency-groups]
dev = [
    "ruff==0.15.14",
    "ty==0.0.39",
    "pytest==9.0.3",
    "mdformat==1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
