[project]
name = "digestif"
version = "0.1.0"
requires-python = "==3.14.6"
dependencies = [
    "aiohttp==3.14.1",
    "resend==2.32.2",
    "beautifulsoup4==4.15.0",
    "requests==2.34.2",
    "mistralai==2.5.1",
    "lxml-html-clean==0.4.5",
]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "ty==0.0.56",
    "pytest==9.1.1",
    "mdformat==1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
